--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,47 @@
-/* You can add global styles to this file, and also import other style files */
-
 /* Importing Bootstrap SCSS file. */
 @import '~bootstrap/scss/bootstrap';
+@import '~sass-color-helpers/stylesheets/_color-helpers.scss';
+
+@import './colours.scss';
+
+.icon-badge {
+	@include border-radius(50%);
+	padding: 0.2em;
+	height: 2em;
+	width: 2em;
+	display: inline-block;
+	text-align: center;
+	background-color: $interchange-colour;
+	color: $text-colour-black;
+}
+
+@for $i from 1 through length($line-colours) {
+	.jumbotron.line-#{$i} {
+		background-color: nth($line-colours, $i);
+		color: ch-best-color-contrast(nth($line-colours, $i), ($text-colour-white, $text-colour-black));
+		// color: contrast-color(nth($line-colours, $i), $text-colour-white, $text-colour-black);
+
+		.line-badge {
+			@extend .icon-badge;
+			background-color: $text-colour-white;
+			color: nth($line-colours, $i);
+		}
+	}
+
+	li,
+	.list-group-item {
+		&.line-#{$i} {
+			.line-badge {
+				@extend .icon-badge;
+				background-color: nth($line-colours, $i);
+				color: ch-best-color-contrast(nth($line-colours, $i), ($text-colour-white, $text-colour-black));
+			}
+		}
+	}
+
+	.container-fluid.line-#{$i} {
+		.carousel-indicators > li {
+			background-color: nth($line-colours, $i);
+		}
+	}
+}
