--- a/src/app/places/places.component.html
+++ b/src/app/places/places.component.html
@@ -7,7 +7,10 @@
 	<div class="row">
 		<div class="col">
 			<div class="list-group">
-				<a class="list-group-item list-group-item-action" *ngFor="let place of places | async" [routerLink]="['./', place?.slug]">{{ place?.name }}</a>
+				<a class="list-group-item list-group-item-action" *ngFor="let place of places | async" [routerLink]="['./', place?.slug]">
+					<fa-icon [icon]="faPlusCircle"></fa-icon>
+					{{ place?.name }}
+				</a>
 			</div>
 		</div>
 	</div>
