--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
 	<div class="collapse navbar-collapse" id="navbar-collapse" [ngbCollapse]="menuCollapsed">
 		<ul class="navbar-nav mr-auto">
 			<li class="nav-item">
-				<a class="nav-link disabled" routerLink="/lines" (click)="menuCollapsed = true">lines</a>
+				<a class="nav-link" routerLink="/lines" (click)="menuCollapsed = true">lines</a>
 			</li>
 			<li class="nav-item" routerLinkActive="active">
 				<a class="nav-link" routerLink="/places" (click)="menuCollapsed = true">places</a>
