--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
 	</button>
 	<div class="collapse navbar-collapse" id="navbar-collapse" [ngbCollapse]="menuCollapsed">
 		<ul class="navbar-nav mr-auto">
-			<li class="nav-item">
+			<li class="nav-item" routerLinkActive="active">
 				<a class="nav-link" routerLink="/lines" (click)="menuCollapsed = true">lines</a>
 			</li>
 			<li class="nav-item" routerLinkActive="active">
