--- a/src/app/lines/line/line.component.html
+++ b/src/app/lines/line/line.component.html
@@ -12,7 +12,7 @@
 	<div class="row">
 		<div class="col">
 			<div class="list-group">
-				<a *ngFor="let station of line?.stations" class="list-group-item list-group-item-action" [routerLink]="['/tour', line?.slug, station?.slug]">
+				<a *ngFor="let station of line?.stations" class="list-group-item list-group-item-action" [routerLink]="['./', station?.slug]">
 					<fa-icon [icon]="faPlusCircle"></fa-icon>
 					{{ station?.name }}
 				</a>
