CSS & design improvements

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,12 +24,12 @@
 	</div>
 </nav>
 <router-outlet></router-outlet>
-<footer class="container-fluid mt-4">
+<footer class="container-fluid my-3">
 	<div class="row">
 		<div class="col-sm">
-			<div class="card text-center">
+			<div class="card bg-light text-center">
 				<div class="card-body">
-					<small>&copy;2005-2020 Richard Whittaker - Milestone Concorde - <a href="https://github.com/PkerUNO/MetEX/issues">Please report any bugs on GitHub</a></small>
+					<small>&copy;2005-2020 Richard Whittaker - Milestone <em>Concorde</em> - <a href="https://github.com/PkerUNO/MetEX/issues">Please report any bugs on GitHub</a></small>
 				</div>
 			</div>
 		</div>
