--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
-<div class="jumbotron jumbotron-fluid py-4 line-7">
+<div class="jumbotron jumbotron-fluid py-4 mb-3 line-7">
 	<div class="container-fluid">
-		<h1 class="display-3">mét<strong>ex</strong></h1>
+		<h1 class="display-2 font-weight-lighter">mét<strong>ex</strong></h1>
 		<p class="lead">The Paris Métro Experience</p>
 	</div>
 </div>
