--- a/src/app/lines/line/line.component.html
+++ b/src/app/lines/line/line.component.html
@@ -1,4 +1,4 @@
-<div class="jumbotron jumbotron-fluid line-{{ line?.id }} py-4">
+<div class="jumbotron jumbotron-fluid line-{{ line?.id }} py-4 mb-3">
 	<div class="container-fluid">
 		<h1 class="display-3"><metex-line-badge *ngIf="line" [line]="line"></metex-line-badge> Line {{ line?.name }}</h1>
 	</div>
