--- a/src/app/lines/station/station.component.html
+++ b/src/app/lines/station/station.component.html
@@ -1,4 +1,4 @@
-<div class="jumbotron jumbotron-fluid line-{{ station?.line?.id }} py-4">
+<div class="jumbotron jumbotron-fluid line-{{ station?.line?.id }} py-4 mb-3">
 	<div class="container-fluid">
 		<h1 class="display-3"><metex-line-badge *ngIf="station?.line" [line]="station?.line"></metex-line-badge> {{ station?.name }}</h1>
 	</div>
