--- a/src/app/places/place/place.component.html
+++ b/src/app/places/place/place.component.html
@@ -1,4 +1,4 @@
-<div class="jumbotron jumbotron-fluid py-4">
+<div class="jumbotron jumbotron-fluid py-4 mb-3">
 	<div class="container-fluid">
 		<h1 class="display-3">{{ place?.name }}</h1>
 	</div>
