--- a/src/app/shared/line-badge/line-badge.component.html
+++ b/src/app/shared/line-badge/line-badge.component.html
@@ -1,3 +1,4 @@
-<div class="line-badge mr-1">
+<div class="line-badge">
+	<span class="sr-only">Line</span>
 	{{ lineNumber }}<small *ngIf="lineSuffix">{{ lineSuffix }}</small>
 </div>
