--- a/src/app/shared/connections/connections.component.html
+++ b/src/app/shared/connections/connections.component.html
@@ -1,6 +1,8 @@
 <ul>
-	<li *ngFor="let station of stations" [class]="'line-' + station?.line?.id">
-		<metex-line-badge [line]="station?.line!"></metex-line-badge>
-		<a [routerLink]="['/lines', station?.line?.slug, station?.slug]">{{ station?.name }}</a>
-	</li>
+	<ng-container *ngFor="let station of stations">
+		<li *ngIf="station?.id !== currentStation" [class]="'line-' + station?.line?.id">
+			<metex-line-badge [line]="station?.line!"></metex-line-badge>
+			<a [routerLink]="['/lines', station?.line?.slug, station?.slug]">{{ station?.name }}</a>
+		</li>
+	</ng-container>
 </ul>
