--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,10 +14,11 @@
 				<a class="nav-link" routerLink="/places" (click)="menuCollapsed = true">places</a>
 			</li>
 		</ul>
-		<ul class="navbar-nav my-0">
+		<ul class="navbar-nav">
 			<li class="nav-item">
-				<a class="nav-link" href="https://github.com/PkerUNO/MetEX/issues">
-					report issue on GitHub
+				<a class="nav-link" href="https://github.com/PkerUNO/MetEX" title="Github">
+					<fa-icon [icon]="faGithub"></fa-icon>
+					<span class="sr-only">GitHub</span>
 				</a>
 			</li>
 		</ul>
@@ -29,7 +30,7 @@
 		<div class="col-sm">
 			<div class="card bg-light text-center">
 				<div class="card-body">
-					<small>&copy;2005-2020 Richard Whittaker - Milestone <em>Concorde</em> - <a href="https://github.com/PkerUNO/MetEX/issues">Please report any bugs on GitHub</a></small>
+					<small>&copy;2005-2020 Richard Whittaker - Milestone <em>{{ milestone }}</em> - <a href="https://github.com/PkerUNO/MetEX/issues">Please report any bugs on GitHub</a></small>
 				</div>
 			</div>
 		</div>
