--- a/src/app/places/places.component.html
+++ b/src/app/places/places.component.html
@@ -7,7 +7,7 @@
 	<div class="row">
 		<div class="col">
 			<div class="list-group">
-				<a *ngFor="let place of places | async" class="list-group-item list-group-item-action" [routerLink]="['./', place?.slug]">
+				<a *ngFor="let place of places$ | async" class="list-group-item list-group-item-action" [routerLink]="['./', place?.slug]">
 					<fa-icon [icon]="faPlusCircle"></fa-icon>
 					{{ place?.name }}
 				</a>
