--- a/src/app/lines/lines.component.html
+++ b/src/app/lines/lines.component.html
@@ -7,7 +7,7 @@
 	<div class="row">
 		<div class="col">
 			<div class="list-group">
-				<a *ngFor="let line of lines | async" class="list-group-item list-group-item-action line-{{ line?.id }}" [routerLink]="['./', line?.slug]">
+				<a *ngFor="let line of lines$ | async" class="list-group-item list-group-item-action line-{{ line?.id }}" [routerLink]="['./', line?.slug]">
 					<metex-line-badge [line]="line" class="h4"></metex-line-badge>
 					<p>{{ line?.description }}</p>
 				</a>
