Add initial E2E tests

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,7 +18,7 @@
 			<li class="nav-item">
 				<a class="nav-link" href="https://github.com/PkerUNO/MetEX" title="Github">
 					<fa-icon [icon]="faGithub"></fa-icon>
-					<span class="sr-only">GitHub</span>
+					<span class="sr-only">Github</span>
 				</a>
 			</li>
 		</ul>
@@ -30,7 +30,7 @@
 		<div class="col-sm">
 			<div class="card bg-light text-center">
 				<div class="card-body">
-					<small>&copy;2005-2020 Richard Whittaker - Milestone <em>{{ milestone }}</em> - <a href="https://github.com/PkerUNO/MetEX/issues">Please report any bugs on GitHub</a></small>
+					<small>&copy;2005-2020 Richard Whittaker - Milestone <em>{{ milestone }}</em> - <a href="https://github.com/PkerUNO/MetEX/issues">Please report any bugs on Github</a></small>
 				</div>
 			</div>
 		</div>
