--- a/src/app/lines/line/line.component.html
+++ b/src/app/lines/line/line.component.html
@@ -10,7 +10,7 @@
   <div class="container-fluid line-{{ line?.id }}">
     <div class="row">
       <div class="col">
-        <p>{{ line?.description }}</p>
+        <p id="content-line-description">{{ line?.description }}</p>
       </div>
     </div>
     <div class="row">
