--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -7,12 +7,12 @@
 	<div class="row">
 		<div class="col">
 			<div class="list-group">
-				<a *ngFor="let entry of entries$ | async" class="list-group-item list-group-item-action" [routerLink]="entry.route">
+				<a *ngFor="let entry of entries$ | async" class="list-group-item list-group-item-action" [routerLink]="['./', entry?.slug]">
 					<h4>
-						<span class="badge badge-secondary">{{ entry.date | date:'d MMM yyyy' }}</span>
-						{{ entry.title }}
+						<span class="badge badge-secondary">{{ entry?.date | date:'d MMM yyyy' }}</span>
+						{{ entry?.title }}
 					</h4>
-					<p>{{ entry.description }}</p>
+					<p>{{ entry?.description }}</p>
 				</a>
 			</div>
 		</div>
