Update Contact blog link

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -33,7 +33,7 @@
 		<div class="col-sm">
 			<div class="card bg-light text-center">
 				<div class="card-body">
-					<small>&copy;2005-2020 <a routerLink="/blog/contact">Richard Whittaker</a> - Milestone <em>{{ milestone }}</em> - <a href="https://github.com/PkerUNO/MetEX/issues">Please report any bugs on Github</a></small>
+					<small>&copy;2005-2020 <a routerLink="/blog/about-and-contact">Richard Whittaker</a> - Milestone <em>{{ milestone }}</em> - <a href="https://github.com/PkerUNO/MetEX/issues">Please report any bugs on Github</a></small>
 				</div>
 			</div>
 		</div>
