Add Journeys module skeleton (#17)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,6 +11,9 @@
 				<a class="nav-link" routerLink="/lines" (click)="menuCollapsed = true">lines</a>
 			</li>
 			<li class="nav-item" routerLinkActive="active">
+				<a class="nav-link" routerLink="/journeys" (click)="menuCollapsed = true">journeys</a>
+			</li>
+			<li class="nav-item" routerLinkActive="active">
 				<a class="nav-link" routerLink="/places" (click)="menuCollapsed = true">places</a>
 			</li>
 		</ul>
