Initial Journeys work

--- a/src/app/journeys/journeys.component.html
+++ b/src/app/journeys/journeys.component.html
@@ -7,6 +7,7 @@
 	<div class="row">
 		<div class="col">
 			<p>JourneyPlayer test bed</p>
+			<metex-journey-player></metex-journey-player>
 			<!-- <div class="list-group">
 				<a *ngFor="let place of places$ | async" class="list-group-item list-group-item-action" [routerLink]="['./', place?.slug]">
 					<fa-icon [icon]="faPlusCircle"></fa-icon>
