Update footer and metadata

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,7 +19,7 @@
 				<a class="nav-link" routerLink="/blog" (click)="menuCollapsed = true">dev blog</a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link" href="https://github.com/PkerUNO/MetEX" title="Github">
+				<a class="nav-link" href="https://github.com/Orforio/MetEX" title="Github">
 					<fa-icon [icon]="faGithub"></fa-icon>
 					<span class="sr-only">Github</span>
 				</a>
@@ -33,7 +33,7 @@
 		<div class="col-sm">
 			<div class="card bg-light text-center">
 				<div class="card-body">
-					<small>&copy;2005-2020 <a routerLink="/blog/about-and-contact">Richard Whittaker</a> - Milestone <em>{{ milestone }}</em> - <a href="https://github.com/PkerUNO/MetEX/issues">Please report any bugs on Github</a></small>
+					<small>&copy;2005-2024 <a routerLink="/blog/about-and-contact">Kit Whittaker</a> - Milestone <em>{{ milestone }}</em> - <a href="https://github.com/Orforio/MetEX/issues">Please report any bugs on Github</a></small>
 				</div>
 			</div>
 		</div>
